kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lms-production
  labels:
    name: lms-production
    environment: production
